--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     
+
+    <script src="./js/secrets.js"></script>
+    <script src="./js/main.js"></script>
+
+    <script>
+        console.log(key)
+    </script>
 </body>
 </html>
